--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ description: >-                        # used by seo meta and the atom feed
   Youngwoo, tech, dev, blog
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: 'https://lyw1217.github.io/'
+url: 'https://lyw1217.github.io'
 
 github:
   username: lyw1217             # change to your github username
